--- a/css/uno.css
+++ b/css/uno.css
@@ -1388,7 +1388,9 @@ nav {
 			opacity: 1; }
 
 .navigation--social {
-	margin-left: 1.5em; }
+	margin-left: 1.5em;
+    margin-right: 1.5em;
+}
 	.navigation--social a {
 		padding: 6px 8px 6px 9px; }
 		.navigation--social a .label {
